--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     build: ./frontend
     container_name: book-catalogue-frontend
     environment:
-      VITE_BACKEND_URL: http://localhost:5000
+      VITE_BACKEND_URL: http://127.0.0.1:5000
     ports:
       - "5173:5173"
     depends_on:
