--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
